--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
   "workspaces": [
     "packages/*"
   ],
+  "resolutions": {
+    "@types/d3-dispatch": "3.0.6",
+    "sass": "^1.54.3",
+    "webpack": "5.99.9"
+  },
   "scripts": {
-    "start": "openmrs develop --sources packages/esm-patient-search-app packages/esm-patient-registration-app --port 8090 --backend https://dmi.kenyahmis.org --config-url https://dmi.kenyahmis.org/openmrs/spa/kenyaemr.config.json https://dmi.kenyahmis.org/openmrs/spa/openmrs.config.json https://hie.kenyahmis.org/openmrs/spa/registration.config.json ",
+    "start": "openmrs develop --sources packages/esm-patient-search-app packages/esm-patient-registration-app --port 8090 --backend https://test.kenyahmis.org --config-url https://test.kenyahmis.org/openmrs/spa/kenyaemr.config.json https://test.kenyahmis.org/openmrs/spa/openmrs.config.json https://test.kenyahmis.org/openmrs/spa/registration.config.json ",
     "ci:publish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag latest",
     "ci:prepublish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag next",
     "release": "yarn workspaces foreach --all --topological version",
-    "verify": "turbo run lint typescript  --concurrency=1",
     "test-e2e": "playwright test",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "preinstall": "npx only-allow yarn",
+    "prettier": "prettier --config prettier.config.js --write \"packages/**/*.{ts,tsx,css,scss}\" \"e2e/**/*.ts\"",
+    "verify": "turbo run lint && turbo run typescript"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -27,9 +34,12 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@carbon/react": "^1.71.0",
-    "@openmrs/esm-framework": "^6.2.1-pre.2794",
+    "@openmrs/esm-framework": "next",
     "@openmrs/esm-patient-common-lib": "next",
     "@playwright/test": "1.49.0",
+    "@rspack/cli": "^1.5.5",
+    "@rspack/core": "^1.5.5",
+    "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.165",
     "@swc/jest": "^0.2.29",
     "@testing-library/dom": "^9.3.3",
@@ -53,14 +63,17 @@
     "dayjs": "^1.8.36",
     "dotenv": "^16.0.3",
     "eslint": "^8.55.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-config-ts-react-important-stuff": "^3.0.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest-dom": "^5.4.0",
     "eslint-plugin-playwright": "^2.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^6.2.2",
     "husky": "^8.0.3",
     "i18next": "^21.10.0",
-    "i18next-parser": "^6.6.0",
+    "i18next-parser": "^9.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
@@ -77,14 +90,10 @@
     "swc-loader": "^0.2.3",
     "turbo": "^2.2.3",
     "typedoc": "^0.22.15",
-    "typescript": "^4.0.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.15.1"
+    "typescript": "^5.3.3"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint --cache --fix --max-warnings 0",
-    "*.{css,scss,ts,tsx}": "prettier --cache --write --list-different"
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
   },
   "packageManager": "yarn@4.2.2"
 }
